--- a/html_template/shell_minimal.html
+++ b/html_template/shell_minimal.html
@@ -68,6 +68,7 @@
     <hr/>
     <textarea class="emscripten" id="output" rows="8"></textarea>
     <hr>
+    <p>Gud morning USA</p>
     <script type='text/javascript'>
       var statusElement = document.getElementById('status');
       var progressElement = document.getElementById('progress');
